<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/about_flappy_horizontal_margin"
    android:layout_marginRight="@dimen/about_flappy_horizontal_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/about_flappy_horizontal_padding"
        android:paddingRight="@dimen/about_flappy_horizontal_padding" >

        <TextView
            android:id="@+id/flappyAboutTitle"
            style="@style/AboutSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_flappy_about_title" />

        <TextView
            android:id="@+id/flappyAboutDesc"
            style="@style/AboutDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_flappy_about_desc" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:scaleType="fitStart"
            android:src="@drawable/flappy_help_about" />

        <TextView
            style="@style/AboutSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_flappy_about_stress_less_title" />

        <TextView
            style="@style/AboutDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_flappy_about_stress_less_desc" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:scaleType="fitStart"
            android:src="@drawable/flappy_help_no_stress" />

        <TextView
            style="@style/AboutSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_flappy_about_disappear_message_title" />

        <TextView
            style="@style/AboutDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_flappy_about_disappear_message_desc" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:scaleType="fitStart"
            android:src="@drawable/flappy_help_disappear" />

        <TextView
            style="@style/AboutSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_flappy_about_merit_title" />

        <TextView
            style="@style/AboutDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_flappy_about_merit_desc" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:scaleType="fitStart"
            android:src="@drawable/flappy_help_no_reply" />

        <TextView
            style="@style/AboutSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_flappy_about_start_title" />

        <TextView
            style="@style/AboutDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_flappy_about_merit_desc" />
    </LinearLayout>

</ScrollView>