<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".LoginActivity" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            style="@style/WelcomeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_welcome_title"
            android:textColor="@color/flappy_pink"
            android:textSize="@dimen/title_text_size" />

        <TextView
            style="@style/WelcomeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_welcome_desc"
            android:textColor="@color/flappy_basic_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_padding_vertical"
                android:text="@string/str_welcome_already_have_account"
                android:textColor="@color/flappy_basic_black"
                android:textSize="@dimen/default_font_size_middle" />

            <Button
                android:id="@+id/welcomeSigninButton"
                style="@style/LcomNormalButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_button"
                android:paddingTop="@dimen/default_padding_vertical"
                android:text="@string/str_welcome_signin_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/block_margin_top"
                android:text="@string/str_welcome_not_have_account"
                android:textColor="@color/flappy_basic_black"
                android:textSize="@dimen/default_font_size_middle" />

            <Button
                android:id="@+id/welcomeCreateAccountButton"
                style="@style/LcomNormalButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/signup_button"
                android:paddingTop="@dimen/default_padding_vertical"
                android:text="@string/str_welcome_create_account_button" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>