<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/contactToUsDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin"
        android:paddingTop="@dimen/contact_margin_dislay_top"
        android:text="@string/str_contact_us_desc" />

    <Spinner
        android:id="@+id/contactToUsTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/contact_margin_top"
        android:drawSelectorOnTop="true"
        android:entries="@array/contact_category"
        android:prompt="@string/str_contact_us_message_title_prompt" />

    <EditText
        android:id="@+id/contactToUsComment"
        style="@style/EditTextStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_vertical"
        android:layout_marginTop="@dimen/default_margin_vertical"
        android:background="@drawable/edittext_frame"
        android:hint="@string/str_contact_us_message_hint"
        android:inputType="textMultiLine"
        android:paddingBottom="@dimen/contact_margin_top" />

    <Button
        android:id="@+id/contactToUsButton"
        style="@style/LcomNormalButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/contact_margin_bottom"
        android:background="@drawable/normal_button"
        android:text="@string/str_help_send_mail_button"
        android:textColor="@drawable/normal_button_text" />

</LinearLayout>